Fix: CSS in footer (location spacing)

--- a/src/components/organisms/Footer/styles.module.scss
+++ b/src/components/organisms/Footer/styles.module.scss
@@ -202,7 +202,7 @@ margin-right: 1rem;
       display: flex;
       flex-direction: column;
       margin-top: 5rem;
-      margin-left: 20%;
+      margin-left: 10%;
       line-height: 2rem;
       width: 11%;
     }
