--- a/src/components/pages/Home/styles.module.scss
+++ b/src/components/pages/Home/styles.module.scss
@@ -228,7 +228,7 @@ height: fit-content;}
                 font-size:2rem;
                 /* margin-left: 5%; */
                 /* line-height: 2.5rem; */
-                bottom: -111px;
+                bottom: -50px;
                 /* white-space: nowrap; */
                 display: inline-block;
             }
